--- a/index.html
+++ b/index.html
@@ -78,24 +78,44 @@
         <h2 class="visually-hidden">Особливості</h2>
         <ul class="feature-list list">
           <li class="feature-list-item antenna">
+            <div class="feature-icons">
+              <svg class="socials-icon" width="70" height="70">
+                <use href="./images/icons.svg#antenna"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="feature-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li class="feature-list-item clock">
+            <div class="feature-icons">
+              <svg class="socials-icon" width="70" height="70">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="feature-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li class="feature-list-item pc">
+            <div class="feature-icons">
+              <svg class="socials-icon" width="70" height="70">
+                <use href="./images/icons.svg#pc"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">ПЛАНУВАННЯ</h3>
             <p class="feature-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="feature-list-item astronaut">
+            <div class="feature-icons">
+              <svg class="socials-icon" width="70" height="70">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="feature-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -143,8 +163,6 @@
               <div class="team-info">
                 <h3 class="team-person">Ігор Дем'яненко</h3>
                 <p class="team-text">Product Designer</p>
-              </div>
-              <div>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -214,8 +232,6 @@
               <div class="team-info">
                 <h3 class="team-person">Ольга Рєпіна</h3>
                 <p class="team-text">Frontend Developer</p>
-              </div>
-              <div>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -285,8 +301,6 @@
               <div class="team-info">
                 <h3 class="team-person">Микола Тарасов</h3>
                 <p class="team-text">Marketing</p>
-              </div>
-              <div>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -356,8 +370,6 @@
               <div class="team-info">
                 <h3 class="team-person">Михайло Єрмаков</h3>
                 <p class="team-text">UI Designer</p>
-              </div>
-              <div>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -471,7 +483,7 @@
     <!--Контакти-->
     <footer class="footer">
       <div class="container container-footer">
-        <div class="container adrress">
+        <div class="adrress">
           <a lang="en" href="./index.html" class="footer-logo links">
             Web<span class="footer-logo-head">Studio</span>
           </a>
