--- a/portfolio.html
+++ b/portfolio.html
@@ -84,91 +84,114 @@
           <!-- Роботи компанії -->
           <ul class="main-list-work list">
             <li class="galery">
-              <img src="./images/portfolio/img-1.jpg" alt="Лептоп" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">Технокряк</h2>
-                <p class="galary-text">Веб-сайт</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-1.jpg" alt="Лептоп" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title">Технокряк</h2>
+                  <p class="galary-text">Веб-сайт</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                alt="Турнір з баскетболу"
-                width="370"
-                height="294"
-              />
-              <div class="galary-border">
-                <h2 class="galery-title">Постер<span lang="en">Orlean vs Golden Star</span></h2>
-                <p class="galary-text">Дизайн</p>
+              <div class="galary-link">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  alt="Турнір з баскетболу"
+                  width="370"
+                  height="294"
+                />
+                <div class="galary-border">
+                  <h2 class="galery-title">Постер<span lang="en">Orlean vs Golden Star</span></h2>
+                  <p class="galary-text">Дизайн</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-3.jpg" alt="Риба" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">
-                  Ресторан
-                  <span lang="en">Seafood</span>
-                </h2>
-                <p class="galary-text">Додаток</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-3.jpg" alt="Риба" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title">
+                    Ресторан
+                    <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="galary-text">Додаток</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-4.jpg" alt="Навушники" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">
-                  Проєкт
-                  <span lang="en">Prime</span>
-                </h2>
-                <p class="galary-text">Маркетинг</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-4.jpg" alt="Навушники" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title">
+                    Проєкт
+                    <span lang="en">Prime</span>
+                  </h2>
+                  <p class="galary-text">Маркетинг</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-5.jpg" alt="Дві коробки" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">
-                  Проєкт
-                  <span lang="en">Boxes</span>
-                </h2>
-                <p class="galary-text">Додаток</p>
+              <div class="galary-link">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  alt="Дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="galary-border">
+                  <h2 class="galery-title">
+                    Проєкт
+                    <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="galary-text">Додаток</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-6.jpg" alt="Монітор" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title" lang="en">Inspiration has no Borders</h2>
-                <p class="galary-text">Веб-сайт</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-6.jpg" alt="Монітор" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title" lang="en">Inspiration has no Borders</h2>
+                  <p class="galary-text">Веб-сайт</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-7.jpg" alt="Книга" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">
-                  Видання
-                  <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="galary-text">Дизайн</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-7.jpg" alt="Книга" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title">
+                    Видання
+                    <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="galary-text">Дизайн</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img src="./images/portfolio/img-8.jpg" alt="Бірка" width="370" height="294" />
-              <div class="galary-border">
-                <h2 class="galery-title">
-                  Проєкт
-                  <span lang="en">LAB</span>
-                </h2>
-                <p class="galary-text">Маркетинг</p>
+              <div class="galary-link">
+                <img src="./images/portfolio/img-8.jpg" alt="Бірка" width="370" height="294" />
+                <div class="galary-border">
+                  <h2 class="galery-title">
+                    Проєкт
+                    <span lang="en">LAB</span>
+                  </h2>
+                  <p class="galary-text">Маркетинг</p>
+                </div>
               </div>
             </li>
             <li class="galery">
-              <img
-                src="./images/portfolio/img-9.jpg"
-                alt="Робочий стіл з ноутбуком і особистими речами"
-                width="370"
-                height="294"
-              />
-              <div class="galary-border">
-                <h2 class="galery-title" lang="en">Growing Business</h2>
-                <p class="galary-text">Додаток</p>
+              <div class="galary-link">
+                <img
+                  src="./images/portfolio/img-9.jpg"
+                  alt="Робочий стіл з ноутбуком і особистими речами"
+                  width="370"
+                  height="294"
+                />
+                <div class="galary-border">
+                  <h2 class="galery-title" lang="en">Growing Business</h2>
+                  <p class="galary-text">Додаток</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -178,7 +201,7 @@
     <!--Контакти-->
     <footer class="footer">
       <div class="container container-footer">
-        <div class="container adrress">
+        <div class="adrress">
           <a lang="en" href="./index.html" class="footer-logo links">
             Web<span class="footer-logo-head">Studio</span>
           </a>
