--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           <li class="client-item">
             <a class="client-link" href="">
               <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#Object"></use>
+                <use href="./images/icons.svg#Logo"></use>
               </svg>
             </a>
           </li>
