--- a/portfolio.html
+++ b/portfolio.html
@@ -84,16 +84,16 @@
           <!-- Роботи компанії -->
           <ul class="main-list-work list">
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-1.jpg" alt="Лептоп" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">Технокряк</h2>
                   <p class="galary-text">Веб-сайт</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-2.jpg"
                   alt="Турнір з баскетболу"
@@ -101,13 +101,13 @@
                   height="294"
                 />
                 <div class="galary-border">
-                  <h2 class="galery-title">Постер<span lang="en">Orlean vs Golden Star</span></h2>
+                  <h2 class="galery-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                   <p class="galary-text">Дизайн</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-3.jpg" alt="Риба" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -116,10 +116,10 @@
                   </h2>
                   <p class="galary-text">Додаток</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-4.jpg" alt="Навушники" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -128,10 +128,10 @@
                   </h2>
                   <p class="galary-text">Маркетинг</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-5.jpg"
                   alt="Дві коробки"
@@ -145,19 +145,19 @@
                   </h2>
                   <p class="galary-text">Додаток</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-6.jpg" alt="Монітор" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title" lang="en">Inspiration has no Borders</h2>
                   <p class="galary-text">Веб-сайт</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-7.jpg" alt="Книга" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -166,10 +166,10 @@
                   </h2>
                   <p class="galary-text">Дизайн</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-8.jpg" alt="Бірка" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -178,10 +178,10 @@
                   </h2>
                   <p class="galary-text">Маркетинг</p>
                 </div>
-              </div>
+              </a>
             </li>
             <li class="galery">
-              <div class="galary-link">
+              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-9.jpg"
                   alt="Робочий стіл з ноутбуком і особистими речами"
@@ -192,7 +192,7 @@
                   <h2 class="galery-title" lang="en">Growing Business</h2>
                   <p class="galary-text">Додаток</p>
                 </div>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
