--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           <!-- Роботи компанії -->
           <ul class="main-list-work list">
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-1.jpg" alt="Лептоп" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">Технокряк</h2>
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-2.jpg"
                   alt="Турнір з баскетболу"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-3.jpg" alt="Риба" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -119,7 +119,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-4.jpg" alt="Навушники" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -131,7 +131,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-5.jpg"
                   alt="Дві коробки"
@@ -148,7 +148,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-6.jpg" alt="Монітор" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title" lang="en">Inspiration has no Borders</h2>
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-7.jpg" alt="Книга" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -169,7 +169,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/portfolio/img-8.jpg" alt="Бірка" width="370" height="294" />
                 <div class="galary-border">
                   <h2 class="galery-title">
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="galery">
-              <a class="galary-link" href="" target="_blank" rel="noreferrer noopener">
+              <a class="galary-link links" href="" target="_blank" rel="noreferrer noopener">
                 <img
                   src="./images/portfolio/img-9.jpg"
                   alt="Робочий стіл з ноутбуком і особистими речами"
